# pizza-htmx

./: .env  .gitignore  Cargo.toml  justfile  license.txt  readme.md
migrations/: 20241121200255_pizzas.sql
src/: handlers.rs  main.rs  model.rs  pizza_storage.rs  templates.rs
templates/: base.html  index.html  pizza_item.html  pizza_item_created.html  pizza_list.html  pizza_page.html  pizza_totalize.html  todo_item.html  todo_item_created.html  todo_list.html  todo_page.html
